changed button to span in effort to fix alignment on mobile screens

--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,6 +1,7 @@
 .about {
   margin: 1rem;
-  button {
+  a {
+    text-decoration: none;
     display: block;
     cursor: pointer;
     margin: 0 auto;
@@ -14,12 +15,12 @@
     overflow: hidden;
     color: #fff;
     font-size: 2rem;
+    span {
+      vertical-align: middle;
+    }
     &:hover {
       background: #6fbcf9;
     }
-  }
-  a {
-    text-decoration: none;
   }
   p {
     font-size: 1.2rem;
